working on template: need to do- create,save edit,delete

--- a/server/Views/Edit.html
+++ b/server/Views/Edit.html
@@ -21,6 +21,7 @@
     <script type="text/javascript" src="/javascripts/Create.js"></script>
     <script type="text/javascript" src="/javascripts/Item.js"></script>
     <script type="text/javascript" src="/javascripts/Screens.js"></script>
+    <script type="text/javascript" src="/javascripts/Templates.js"></script>
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -37,6 +38,7 @@
                 <li><a href="/Create">Create</a></li>
                 <li><a href="/ScreensManagement">Manage</a></li>
                 <a href="/Screens">Screens</a></li>
+                <li><a href="/Templates">Templates</a></li>
                 <li><a href="/About">About</a></li>
             </ul>
         </header>
