--- a/server/Views/List.html
+++ b/server/Views/List.html
@@ -18,6 +18,7 @@
     <script type="text/javascript" src="/javascripts/Create.js"></script>
     <script type="text/javascript" src="/javascripts/Item.js"></script>
     <script type="text/javascript" src="/javascripts/Screens.js"></script>
+    <script type="text/javascript" src="/javascripts/Templates.js"></script>
 
     <meta charset="UTF-8">
     <title>Messages list</title>
@@ -33,6 +34,7 @@
                 <li><a href="/Create">Create</a></li>
                 <li><a href="/ScreensManagement">Manage</a></li>
                 <li><a href="/Screens">Screens</a></li>
+                <li><a href="/Templates">Templates</a></li>
                 <li><a href="/About">About</a></li>
             </ul>
 
