--- a/server/Views/ScreensManagement.html
+++ b/server/Views/ScreensManagement.html
@@ -20,6 +20,7 @@
     <script type="text/javascript" src="/javascripts/Create.js"></script>
     <script type="text/javascript" src="/javascripts/Item.js"></script>
     <script type="text/javascript" src="/javascripts/Screens.js"></script>
+    <script type="text/javascript" src="/javascripts/Templates.js"></script>
 
     <meta charset="UTF-8">
     <title>Screen Display</title>
@@ -28,13 +29,16 @@
 <body ng-controller="ScreensManagementCtrl">
 
 <div class="container">
-    <header class="col-sm-12">
+
+
+    <header>
         <h3 class="text-muted">Messages</h3>
         <ul class="nav nav-pills">
             <li><a href="/list">List</a></li>
             <li><a href="/Create">Create</a></li>
             <li class="active"><a href="/ScreensManagement">Manage</a></li>
             <li><a href="/Screens">Screens</a></li>
+            <li><a href="/Templates">Templates</a></li>
             <li><a href="/About">About</a></li>
         </ul>
 
