--- a/server/Views/index.html
+++ b/server/Views/index.html
@@ -15,5 +15,6 @@
     <script type="text/javascript" src="/javascripts/Create.js"></script>
     <script type="text/javascript" src="/javascripts/Item.js"></script>
     <script type="text/javascript" src="/javascripts/Screens.js"></script>
+    <script type="text/javascript" src="/javascripts/Templates.js"></script>
 </ng-view>
 </html>
