--- a/server/Views/Templates.html
+++ b/server/Views/Templates.html
@@ -52,17 +52,18 @@
         <br>
 
         <div id="editDelete" class="col-sm-12 form-inline" ng-hide="isEditMode">
-            <button class="form-control" style="width:80px;" ng-click="editTemplate()" ng-Disabled="!isShowMode">Edit</button>
-            <button class="form-control" style="width:80px;" ng-click="deleteTemplate(currentTemplate)" ng-Disabled="!isShowMode">Delete</button>
+            <button class="form-control btn btn-default" ngf-select="upload($files)">Upload template</button>
+            <button class="form-control" ng-click="deleteTemplate(currentTemplate)" ng-Disabled="!isShowMode">Delete</button>
             <label class="">{{currentTemplate.path}}</label>
         </div>
 
+        <!--
         <div id="saveCancel" class="col-sm-12 form-inline"  ng-hide="!isEditMode">
             <button class="form-control" style="width:80px;" ng-click="">Save</button>
             <button class="form-control" style="width:80px;" ng-click="cancelShow()">Cancel</button>
             <label class="">{{currentTemplate.path}}</label>
         </div>
-
+        -->
         <div class="col-sm-10">
         <textarea id="templateHtml" class="form-control" style="border: 1px black solid; height: 400px;" rows="5" ng-Disabled="!isEditMode">
         </textarea>
