uploading new template and refreshing. need to work on design

--- a/server/Views/Templates.html
+++ b/server/Views/Templates.html
@@ -74,7 +74,20 @@
                <button class="form-control" style="margin: 5px;" ng-click="showTemplate(template)" ng-Disabled="isEditMode">{{template.path}}</button>
         </div>
 
+        <div id="chanegsSaved" class="modal fade" role="dialog">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h4 class="modal-title">Changes saved!</h4>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
 
+            </div>
+        </div>
 
 
     </div>
