working on the statistics..

--- a/server/Views/Create.html
+++ b/server/Views/Create.html
@@ -22,6 +22,7 @@
     <script type="text/javascript" src="/javascripts/Item.js"></script>
     <script type="text/javascript" src="/javascripts/Screens.js"></script>
     <script type="text/javascript" src="/javascripts/Templates.js"></script>
+    <script type="text/javascript" src="/javascripts/Statistics.js"></script>
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -39,6 +40,7 @@
             <li><a href="/ScreensManagement">Manage</a></li>
             <li><a href="/Screens">Screens</a></li>
             <li><a href="/Templates">Templates</a></li>
+            <li><a href="/Statistics">Statistics</a></li>
             <li><a href="/About">About</a></li>
         </ul>
     </header>
