--- a/server/Views/Screens.html
+++ b/server/Views/Screens.html
@@ -22,6 +22,7 @@
     <script type="text/javascript" src="/javascripts/Item.js"></script>
     <script type="text/javascript" src="/javascripts/Screens.js"></script>
     <script type="text/javascript" src="/javascripts/Templates.js"></script>
+    <script type="text/javascript" src="/javascripts/Statistics.js"></script>
 
     <script src="http://maps.google.com/maps/api/js?sensor=false&libraries=places" type="text/javascript"></script>
 
@@ -40,6 +41,7 @@
                 <li><a href="/ScreensManagement">Manage</a></li>
                 <li class="active"><a href="/Screens">Screens</a></li>
                 <li><a href="/Templates">Templates</a></li>
+                <li><a href="/Statistics">Statistics</a></li>
                 <li><a href="/About">About</a></li>
             </ul>
         </header>
