--- a/server/Views/index.html
+++ b/server/Views/index.html
@@ -16,5 +16,6 @@
     <script type="text/javascript" src="/javascripts/Item.js"></script>
     <script type="text/javascript" src="/javascripts/Screens.js"></script>
     <script type="text/javascript" src="/javascripts/Templates.js"></script>
+    <script type="text/javascript" src="/javascripts/Statistics.js"></script>
 </ng-view>
 </html>
