--- a/server/Views/List.html
+++ b/server/Views/List.html
@@ -19,6 +19,7 @@
     <script type="text/javascript" src="/javascripts/Item.js"></script>
     <script type="text/javascript" src="/javascripts/Screens.js"></script>
     <script type="text/javascript" src="/javascripts/Templates.js"></script>
+    <script type="text/javascript" src="/javascripts/Statistics.js"></script>
 
     <meta charset="UTF-8">
     <title>Messages list</title>
@@ -35,6 +36,7 @@
                 <li><a href="/ScreensManagement">Manage</a></li>
                 <li><a href="/Screens">Screens</a></li>
                 <li><a href="/Templates">Templates</a></li>
+                <li><a href="/Statistics">Statistics</a></li>
                 <li><a href="/About">About</a></li>
             </ul>
 
