--- a/server/Views/ScreensManagement.html
+++ b/server/Views/ScreensManagement.html
@@ -21,6 +21,7 @@
     <script type="text/javascript" src="/javascripts/Item.js"></script>
     <script type="text/javascript" src="/javascripts/Screens.js"></script>
     <script type="text/javascript" src="/javascripts/Templates.js"></script>
+    <script type="text/javascript" src="/javascripts/Statistics.js"></script>
 
     <meta charset="UTF-8">
     <title>Screen Display</title>
@@ -39,6 +40,7 @@
             <li class="active"><a href="/ScreensManagement">Manage</a></li>
             <li><a href="/Screens">Screens</a></li>
             <li><a href="/Templates">Templates</a></li>
+            <li><a href="/Statistics">Statistics</a></li>
             <li><a href="/About">About</a></li>
         </ul>
 
