--- a/server/Views/Display.html
+++ b/server/Views/Display.html
@@ -3,9 +3,10 @@
 <head>
 
     <link rel="stylesheet" type="text/css" href="/stylesheets/Display.css" />
-
+    <script type="text/javascript" src="/javascripts/Graphs/fusioncharts/fusioncharts.js"></script>
     <script type="text/javascript" src="/javascripts/angular/angular.js"></script>
     <script type="text/javascript" src="/javascripts/angular/angular-route.js"></script>
+    <script type="text/javascript" src="/javascripts/Graphs/angular-fusioncharts.min.js"></script>
     <script type="text/javascript" src="/Bootstrap/ng-file-upload/ng-file-upload.js"></script>
     <script type="text/javascript" src="/Bootstrap/ng-file-upload/ng-file-upload-shim.js"></script>
     <script type="text/javascript" src="/javascripts/display.js"></script>
@@ -14,10 +15,12 @@
     <script type="text/javascript" src="/javascripts/App.js"></script>
     <script type="text/javascript" src="/javascripts/Edit.js"></script>
     <script type="text/javascript" src="/javascripts/checklist-model.js"></script>
+    <script type="text/javascript" src="/javascripts/Statistics.js"></script>
     <script type="text/javascript" src="/javascripts/Services.js"></script>
     <script type="text/javascript" src="/javascripts/List.js"></script>
     <script type="text/javascript" src="/javascripts/ScreensManagement.js"></script>
     <script type="text/javascript" src="/javascripts/Create.js"></script>
+    <script type="text/javascript" src="/javascripts/Templates.js"></script>
     <script type="text/javascript" src="/javascripts/Item.js"></script>
     <script type="text/javascript" src="/javascripts/Screens.js"></script>
     
