--- a/server/Views/Item.html
+++ b/server/Views/Item.html
@@ -1,8 +1,10 @@
 ﻿<!DOCTYPE html>
 <html lang="en" ng-app="MessagesApp">
 <head>
+    <script type="text/javascript" src="/javascripts/Graphs/fusioncharts/fusioncharts.js"></script>
     <script src="/javascripts/angular/angular.js"></script>
     <script src="/javascripts/angular/angular-route.js"></script>
+    <script type="text/javascript" src="/javascripts/Graphs/angular-fusioncharts.min.js"></script>
     <link rel="stylesheet" type="text/css" href="/Bootstrap/bootstrap/dist/css/bootstrap.css" />
     <script type="text/javascript" src="/javascripts/checklist-model.js"></script>
     <script type="text/javascript" src="/Bootstrap/ng-file-upload/ng-file-upload.js"></script>
@@ -37,7 +39,7 @@
                 <li><a href="/list">List</a></li>
                 <li><a href="/Create">Create</a></li>
                 <li><a href="/ScreensManagement">Manage</a></li>
-                <a href="/Screens">Screens</a></li>
+                <li><a href="/Screens">Screens</a></li>
                 <li><a href="/Templates">Templates</a></li>
                 <li><a href="/Statistics">Statistics</a></li>
                 <li><a href="/About">About</a></li>
