--- a/server/Views/Create.html
+++ b/server/Views/Create.html
@@ -46,7 +46,9 @@
             <li><a href="/About">About</a></li>
         </ul>
     </header>
-    <h2>Create message</h2>
+    <div class="jumbotron">
+        <h1>Create message</h1>
+    </div>
     <form class="form-horizontal" role="form">
         <div class="form-group">
             <label class="control-label col-sm-2">Name</label>
