--- a/server/Views/ScreensManagement.html
+++ b/server/Views/ScreensManagement.html
@@ -85,7 +85,7 @@
             </form>
         </div>
         <h2>Screen:</h2>
-        <div id="display" style="border: 1px black solid; height:400px">&nbsp;</div>
+        <div id="display">&nbsp;</div>
 
 </div>
 </body>
