--- a/server/Views/Edit.html
+++ b/server/Views/Edit.html
@@ -46,7 +46,11 @@
                 <li><a href="/About">About</a></li>
             </ul>
         </header>
-        <h2>Edit message</h2>
+
+        <div class="jumbotron">
+            <h1>Edit message</h1>
+        </div>
+
         <form class="form-horizontal" role="form">
             <div class="form-group">
                 <label class="control-label col-sm-2">Name</label>
