--- a/server/Views/Item.html
+++ b/server/Views/Item.html
@@ -45,10 +45,10 @@
                 <li><a href="/About">About</a></li>
             </ul>
         </header>
-        <h2>message</h2>
+        <div class="jumbotron"><h1>Message</h1></div>
         <p>
             <a class="btn btn-primary" href="/Edit?name={{Message.name}}" role="button">Edit &raquo;</a>
-            <a class="btn btn-warning" href="/Delete?name={{Message.name}}" role="button">Delete &raquo;</a>
+            <button class="btn btn-warning" ng-click="deleteMessage(Message)">Delete</button>
         </p>
         <p style="font-size:20px;">Name:
                     <span style="text-decoration:underline;font-weight:bold">
