--- a/server/Views/List.html
+++ b/server/Views/List.html
@@ -101,7 +101,7 @@
                         </div>
                         <p>
                             <a class="btn btn-primary" href="/Edit?name={{Message.name}}" role="button">Edit &raquo;</a>
-                            <a class="btn btn-warning" href="/Delete?name={{Message.name}}" role="button">Delete &raquo;</a>
+                            <button class="btn btn-warning" ng-click="deleteMessage(Message)">Delete</button>
                         </p>
                     </div>
                 </div>
@@ -109,5 +109,6 @@
 
         </div>
     </div>
+
 </body>
 </html>
