--- a/server/Views/Templates.html
+++ b/server/Views/Templates.html
@@ -49,7 +49,7 @@
         </header>
 
         <div class="jumbotron">
-            <h1>Manage Templates:</h1>
+            <h1>Templates:</h1>
         </div>
 
         <h2>Templates:</h2>
